force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/cgcloud__Product_Assortment_Grid_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Assortment Grid configuration.</description>
    <label>Product Assortment Grid Setting</label>
    <pluralLabel>Product Assortment Grid Settings</pluralLabel>
</CustomObject>