force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__DisplayInFilter__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__DisplayInFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Subscriber and Developer Editable: The subscriber and developer can edit the component attributes in this column. However, these attributes aren’t upgradeable. Only new subscribers receive the latest changes.</description>
    <label>Display In Filter</label>
    <type>Checkbox</type>
</CustomField>