force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__Editable__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Editable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field can be edit by the user.</description>
    <label>Editable</label>
    <type>Checkbox</type>
</CustomField>