force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Name__c</fullName>
    <description>The salesforce field api name to be configured</description>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>