force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__Field_Wrapper_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Wrapper_Name__c</fullName>
    <description>Wrapper field name</description>
    <label>Field Wrapper Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>