force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__MaxColumnWidth__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__MaxColumnWidth__c</fullName>
    <label>Max Column Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>