force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__MinColumnWidth__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__MinColumnWidth__c</fullName>
    <label>Min Column Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>