force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Object_Type__c</fullName>
    <description>The salesforce object related to the field.</description>
    <label>Object Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>