force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__RecordType__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__RecordType__c</fullName>
    <description>Indicates the record type that the configuration belongs to. 
We use the record type from Product Assortment template. 

Possible values for retail: 
- Assortment_List 
- Customer_Selling_Assortments 
- Sales_Document_Assortments 

Possible values for TPM: 
- Planning_Assortment_List</description>
    <label>Record Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>