force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the field is mandatory in the matrix.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>