force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <description>Name of the Sales Org for which this configuration applies. 
Empty value means that is relevant independently of the salesOrg.</description>
    <label>Sales Org</label>
    <length>40</length>
    <type>Text</type>
</CustomField>