force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__TypeAttributes__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__TypeAttributes__c</fullName>
    <label>Type Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>