force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__Visible__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the column should be visible in the matrix. true by default. False to hide the column, in other case will be considered as true.</description>
    <label>Visible</label>
    <type>Checkbox</type>
</CustomField>