force-app/main/default/objects/cgcloud__Product_Assortment_Grid_Setting__mdt/fields/cgcloud__Width__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Width__c</fullName>
    <description>Width of the column as a percentage.</description>
    <label>Width</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>